Fixed alignment issue, changed div box to white, removed "Logged in as:"

--- a/assets/style.css
+++ b/assets/style.css
@@ -107,13 +107,13 @@ nav form{
     margin: 0px;
 }
 .navbar-default{
-    height: 120px;
+    height: 160px;
     padding: 0px;
     background-color: azure;
 }
 .navbar-nav{
     width: 100%;
-    height: 75px;
+    height: 150px;
     background-color: azure;
 }
 .navbar-brand{
